🐛 fix(collector): 신규 등급 스냅샷 코드 PMD 위반 해소
- RankingSnapshot: 기존 엔티티 컨벤션(StockGrade) 정렬 — @NoArgsConstructor
  force=true + 불변 필드 final (ImmutableField)
- GradeClassificationService/RankingSnapshotScheduler: clock 필드 final
  (ReflectionTestUtils 주입은 final 필드에서 정상 동작)
- RankingSnapshotService: 미발동 @SuppressWarnings 제거 (UnnecessaryWarningSuppression)
- 테스트: get(0)→getFirst() (Java 21 SequencedCollection), "KRX"::equals
  메서드 레퍼런스, if 조건 리터럴 추출

🗿 MoAI <email@mo.ai.kr>